--- a/_config.yml
+++ b/_config.yml
@@ -19,13 +19,13 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Digital Diversity Living Lab
-email: your-email@example.com
+email: info@digitaldiversitylab.org
 description: >- # this means to ignore newlines until "baseurl:"
   The Digital Diversity Living Lab is a space to develop and share tools and practice that make digital more accessible.
   The project is interested in access to the IT profession as well as making things better for end-users.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-github_username:  jekyll
+url: "https://www.digitaldiversitylab.org" # the base hostname & protocol for your site, e.g. http://example.com
+github_username:  digital-diversity-lab
 
 # Build settings
 theme: minima
