--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,10 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://www.digitaldiversitylab.org" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  digital-diversity-lab
 
+# Appearance
+header_pages:
+  - about.md
+
 # Build settings
 theme: minima
 plugins:
