--- a/_config.yml
+++ b/_config.yml
@@ -21,8 +21,7 @@
 title: Digital Diversity Living Lab
 email: info@digitaldiversitylab.org
 description: >- # this means to ignore newlines until "baseurl:"
-  The Digital Diversity Living Lab is a space to develop and share tools and practice that make digital more accessible.
-  The project is interested in access to the IT profession as well as making things better for end-users.
+The Digital Diversity Living Lab is a place to research the micro-level of individual subjective experience, the macro-level of their context and problem domain as systems and apply this to co-design of digital products and services to augment self-expression and develop auyonomy within the world.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://www.digitaldiversitylab.org" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  digital-diversity-lab
